* midlertidig baseline for Gradle 5 utvikling [SKTOOLS-190]
[git-p4: depot-paths = "//sktools/SKToolsKode/trunk/": change = 91136]